# garment-numbers-colored-point-sets

./: README.md  pyproject.toml  render.sh
cpp/: CMakeLists.txt  check.cpp  garment.cpp  lib.cpp  lib.hpp  util.cpp  util.hpp
data/: n10_c2_no_mc_bowtie_pant.csv  n12_c2_no_mc_bowtie_skirt.csv  n12_c2_no_monochromatic_triangle_union.csv  n14_c2_no_mc_necklace.csv  n22_c2_no_mc_cravat_pant.csv  n35_c2_no_mc_cravat_skirt.csv  n46_c2_no_mc_cravat.csv  quad.csv
src/fourholes/: lib.py  main.py  util.py  viz_test.py
src/fourholes/ipe/: main.py
src/garment_nrs/: check.py  lib.py  main.py  util.py  viz_test.py
src/garment_nrs/ipe/: lib.py  main.py
