[project]
name = "garment-numbers-colored-point-sets"
version = "0.1.0"
description = "GuARanteed Monochromatic Empty Not-quite-order Type numbers of bichromatic point sets"
requires-python = ">=3.14"
dependencies = [
    "shapely",
    "pandas",
    "matplotlib",
    "tqdm",
    "more_itertools",
    "click"
]

[project.optional-dependencies]
render = [
    "cppyy"
]

[project.scripts]
garment = "garment_nrs.main:main"
garment-render = "garment_nrs.ipe.main:main"
